Update print statement to say 'Goodbye World'

--- a/skills.html
+++ b/skills.html
@@ -826,8 +826,10 @@ h2::after{
             If you’d like a detailed version of my experience and projects, you can download my resume here.
           </p>
 
-          <a class="btn-pill accent" href="resume.pdf" target="_blank" rel="noopener">
-            Download Resume
+          <a class="btn-pill accent" href="Suhas_Resume.pdf" target="_blank" rel="noopener">
+               Download Resume
+         </a>
+
           </a>
 
           
@@ -884,3 +886,4 @@ h2::after{
 
 </body>
 </html>
+
