Update print statement from 'Hello' to 'Goodbye'

--- a/projects.html
+++ b/projects.html
@@ -667,9 +667,18 @@ ul{margin:10px 0 0 18px}
     document.body.classList.toggle("theme-maroon");
     document.body.classList.toggle("theme-intel");
   });
+
+   <script>
+  window.addEventListener("load", () => {
+    const v = document.querySelector("#p1 video");
+    if (v) v.play().catch(()=>{});
+  });
+</script>
+
 </script>
 
 </body>
 </html>
+
 
 
