--- a/projects.html
+++ b/projects.html
@@ -480,6 +480,11 @@ ul{margin:10px 0 0 18px}
           </span>
           View Project (GitHub)
         </a>
+         <a class="btn" target="_blank" rel="noopener noreferrer"
+            href="cash_flow_report.pdf">
+           View Research Report (PDF)
+</a>
+
       </div>
 
       <div class="card reveal">
@@ -676,6 +681,7 @@ ul{margin:10px 0 0 18px}
 
 </body>
 </html>
+
 
 
 
