Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/projects.html
+++ b/projects.html
@@ -422,17 +422,19 @@ ul{margin:10px 0 0 18px}
              Quick demo of the GenAI Screen Reader output.
            </div>
 
-           <video
-           id="demoVideo"
-           autoplay
-           muted
-           loop
-           playsinline
-           preload="auto"
-           style="width:100%; border-radius:14px; border:1px solid rgba(255,255,255,0.14); background:rgba(0,0,0,0.25);">
-  <source src="./nlp_project_output.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+           <a href="nlp_project_output.mp4" target="_blank" rel="noopener noreferrer">
+  <video
+    id="demoVideo"
+    autoplay
+    muted
+    loop
+    playsinline
+    preload="auto"
+    style="width:100%; border-radius:14px; border:1px solid rgba(255,255,255,0.14); background:rgba(0,0,0,0.25); cursor:pointer;">
+    <source src="nlp_project_output.mp4" type="video/mp4">
+  </video>
+</a>
+
 
 
   <div class="small" style="margin-top:10px;">
@@ -713,6 +715,7 @@ ul{margin:10px 0 0 18px}
 
 </body>
 </html>
+
 
 
 
