--- a/projects.html
+++ b/projects.html
@@ -566,6 +566,7 @@ ul{margin:10px 0 0 18px}
           <li>Privacy-first architecture</li>
           <li>Role-based workflows</li>
           <li>Realistic free hosting plan</li>
+          <li>Status: in progress — shown as concept overview.</li>
         </ul>
       </div>
     </div>
@@ -652,9 +653,7 @@ ul{margin:10px 0 0 18px}
       <div class="card reveal">
         <p><b>Next upgrade:</b></p>
         <ul>
-          <li>Embed your demo video in section 1</li>
-          <li>Add 1 screenshot per featured project</li>
-          <li>Replace “View Project” links with specific repos once you sort them</li>
+          <li>Soon to be published </li>
         </ul>
       </div>
     </div>
@@ -715,6 +714,7 @@ ul{margin:10px 0 0 18px}
 
 </body>
 </html>
+
 
 
 
