--- a/projects.html
+++ b/projects.html
@@ -653,7 +653,7 @@ ul{margin:10px 0 0 18px}
       <div class="card reveal">
         <p><b>Next upgrade:</b></p>
         <ul>
-          <li>Soon to be published </li>
+          <li>Please check Github</li>
         </ul>
       </div>
     </div>
@@ -714,6 +714,7 @@ ul{margin:10px 0 0 18px}
 
 </body>
 </html>
+
 
 
 
